--- a/Lab2/Instagram/style.css
+++ b/Lab2/Instagram/style.css
@@ -99,11 +99,12 @@ main {
 
 #appStore {
     width: 135px;
-    left: 50px;
+    margin-right: 30px;
+
 }
 
 #googlePlay {
     width: 135px;
     border-radius: 8px;
-    right: 50px;
+    margin-left: 30px;
 }
